--- a/src/main/resources/assets/xanders-sodium-options/lang/en_us.json
+++ b/src/main/resources/assets/xanders-sodium-options/lang/en_us.json
@@ -8,5 +8,15 @@
   "xso.cfg.hard_crash.tooltip": "If XSO cannot convert the Sodium GUI for whatever reason, enabling this makes Minecraft crash completely, rather than displaying the warning and giving you the original Sodium GUI. This can be beneficial as it makes Minecraft generate a crash report whereas it only prints to latest.log with this option off.",
 
   "xso.incompatible.button": "Option Incompatible",
-  "xso.incompatible.tooltip": "This option is currently incompatible with XSO. Please make an issue to get support!"
+  "xso.incompatible.tooltip": "This option is currently incompatible with XSO. Please make an issue to get support!",
+  "options.iris.openShaderPackScreen": "Open Original Screen",
+  "options.iris.openShaderPackScreen.description": "If you're having difficulty using this screen to change shaders, you can click this button to access the original Iris shaders screen.",
+  "options.iris.downloadShaders": "Download Shaders",
+  "options.iris.downloadShaders.description": "Click this button to open Modrinth's \"Shader Packs\" search page.",
+  "options.iris.openShaderPacksFolder.description": "Click this button to open the \"shaderpacks\" folder which is where Iris loads shaderpacks.",
+  "options.iris.selectedShaderPack": "Selected Shaders",
+  "options.iris.selectedShaderPack.description": "The chosen shaderpack to be loaded by Iris.",
+  "options.iris.enableShaders": "Enable Shaders",
+  "options.iris.enableShaders.description": "Should Iris enable shader rendering?",
+  "options.iris.shaderPackOptions": "If you want to edit the current shader pack's configuration you will either need to do that through the configuration file or the original Iris Shader Packs configuration screen."
 }
