--- a/src/main/resources/assets/xanders-sodium-options/lang/en_us.json
+++ b/src/main/resources/assets/xanders-sodium-options/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "xso.title": "Xander's Sodium Options",
+
   "xso.cfg.enabled": "XSO",
   "xso.cfg.enabled.tooltip": "Configures whether XSO should override Sodium's options. When disabled, you can configure this mod through mod menu.",
   "xso.cfg.lenient_opts": "Lenient Options",
@@ -9,6 +10,7 @@
 
   "xso.incompatible.button": "Option Incompatible",
   "xso.incompatible.tooltip": "This option is currently incompatible with XSO. Please make an issue to get support!",
+
   "options.iris.openShaderPackScreen": "Open Original Screen",
   "options.iris.openShaderPackScreen.description": "If you're having difficulty using this screen to change shaders, you can click this button to access the original Iris shaders screen.",
   "options.iris.downloadShaders": "Download Shaders",
@@ -18,5 +20,7 @@
   "options.iris.selectedShaderPack.description": "The chosen shaderpack to be loaded by Iris.",
   "options.iris.enableShaders": "Enable Shaders",
   "options.iris.enableShaders.description": "Should Iris enable shader rendering?",
-  "options.iris.shaderPackOptions": "If you want to edit the current shader pack's configuration you will either need to do that through the configuration file or the original Iris Shader Packs configuration screen."
+  "options.iris.shaderPackOptions": "If you want to edit the current shader pack's configuration you will either need to do that through the configuration file or the original Iris Shader Packs configuration screen.",
+
+  "options.moreculling.resetcache.description": "Clears More Culling's internal cache. Useful if you experience visual glitches after changing settings."
 }
