--- a/src/main/resources/assets/xanders-sodium-options/lang/en_us.json
+++ b/src/main/resources/assets/xanders-sodium-options/lang/en_us.json
@@ -21,6 +21,8 @@
   "xso.cfg.lenient_opts.tooltip": "If XSO fails to convert an option, instead of failing to create the whole GUI, it adds a placeholder option in place of the broken option so you can continue to use XSO with an incompatible mod.",
   "xso.cfg.hard_crash": "Hard Crash",
   "xso.cfg.hard_crash.tooltip": "If XSO cannot convert the Sodium GUI for whatever reason, enabling this makes Minecraft crash completely, rather than displaying the warning and giving you the original Sodium GUI. This can be beneficial as it makes Minecraft generate a crash report whereas it only prints to latest.log with this option off.",
+  "xso.cfg.external_menus": "External Menus",
+  "xso.cfg.external_menus.tooltip": "When enabled, clicking on categories like Iris will open their original configuration screens instead of XSO's integrated view. Useful if you prefer the native interfaces or experience compatibility issues.",
 
   "xso.donation.tooltip": "Support Sodium's Development",
   "xso.donation.confirm.title": "Support Sodium",
